--- a/index.html
+++ b/index.html
@@ -1,98 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Official Abyss News</title>
+<meta charset="UTF-8">
+<title>Official Abyss News</title>
 
-  <style>
-    body {
-      background-color: #0b0b0f;
-      color: white;
-      font-family: Arial, sans-serif;
-      padding: 30px;
-    }
+<style>
+:root {
+  --accent: #8a2be2;
+  --accent-soft: rgba(138,43,226,0.4);
+  --bg-dark: #0b0b0f;
+  --panel: #12121a;
+}
 
-    h1 {
-      text-align: center;
-      color: #8a2be2;
-      letter-spacing: 2px;
-    }
+/* ---------- GLOBAL ---------- */
+body {
+  background: radial-gradient(circle at top, #13131d, var(--bg-dark));
+  color: white;
+  font-family: "Segoe UI", Arial, sans-serif;
+  padding: 40px;
+  min-height: 100vh;
+  animation: bgPulse 10s infinite alternate;
+}
 
-    #newsBox {
-      background: #111;
-      padding: 20px;
-      border-left: 4px solid #8a2be2;
-      margin-top: 20px;
-      min-height: 100px;
-    }
+@keyframes bgPulse {
+  from { background-position: 0% 0%; }
+  to { background-position: 100% 100%; }
+}
 
-    #editor {
-      display: none;
-      margin-top: 20px;
-    }
+h1 {
+  text-align: center;
+  font-size: 36px;
+  letter-spacing: 4px;
+  color: var(--accent);
+  text-shadow: 0 0 15px var(--accent-soft);
+  animation: glow 2.5s infinite alternate;
+}
 
-    textarea {
-      width: 100%;
-      height: 200px;
-      background: #0f0f14;
-      color: white;
-      border: 1px solid #444;
-      padding: 10px;
-      font-size: 15px;
-    }
+@keyframes glow {
+  from { text-shadow: 0 0 10px var(--accent-soft); }
+  to { text-shadow: 0 0 25px var(--accent); }
+}
 
-    button {
-      margin-top: 10px;
-      padding: 10px 15px;
-      background: #8a2be2;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
+/* ---------- NEWS CARD ---------- */
+#newsBox {
+  background: linear-gradient(145deg, #151520, #0e0e15);
+  padding: 25px;
+  border-left: 5px solid var(--accent);
+  margin-top: 30px;
+  border-radius: 10px;
+  box-shadow: 0 0 30px rgba(0,0,0,0.5);
+  animation: float 6s ease-in-out infinite;
+}
 
-    button:hover {
-      background: #6a1bbd;
-    }
-  </style>
+@keyframes float {
+  0%,100% { transform: translateY(0); }
+  50% { transform: translateY(-6px); }
+}
+
+#newsText {
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+/* ---------- BUTTON ---------- */
+button {
+  margin-top: 20px;
+  padding: 12px 22px;
+  background: linear-gradient(135deg, #9a4dff, #6a1bbd);
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 8px;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  box-shadow: 0 0 15px var(--accent-soft);
+}
+
+button:hover {
+  transform: translateY(-2px) scale(1.02);
+  box-shadow: 0 0 25px var(--accent);
+}
+
+button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  background: rgba(255,255,255,0.3);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  transition: width 0.5s, height 0.5s;
+}
+
+button:active::after {
+  width: 300px;
+  height: 300px;
+}
+
+/* ---------- EDITOR ---------- */
+#editor {
+  margin-top: 25px;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.5s ease;
+}
+
+#editor.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+textarea {
+  width: 100%;
+  height: 220px;
+  background: #0f0f18;
+  color: white;
+  border: 1px solid #333;
+  border-radius: 8px;
+  padding: 15px;
+  font-size: 16px;
+  resize: none;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.6);
+}
+
+textarea:focus {
+  outline: none;
+  border-color: var(--accent);
+  box-shadow: 0 0 15px var(--accent-soft);
+}
+
+/* ---------- SAVE FEEDBACK ---------- */
+#saved {
+  margin-top: 10px;
+  color: #7CFC98;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+#saved.show {
+  opacity: 1;
+}
+</style>
 </head>
 
 <body>
 
-  <h1>OFFICIAL ABYSS NEWS</h1>
+<h1>OFFICIAL ABYSS NEWS</h1>
 
-  <div id="newsBox">
-    <p id="newsText">No official updates at this time.</p>
-  </div>
+<div id="newsBox">
+  <p id="newsText">No official updates at this time.</p>
+</div>
 
-  <button onclick="unlockEditor()">Edit (Staff Only)</button>
+<button onclick="unlockEditor()">Edit</button>
 
-  <div id="editor">
-    <textarea id="newsInput"></textarea>
-    <br>
-    <button onclick="saveNews()">Save Update</button>
-  </div>
+<div id="editor">
+  <textarea id="newsInput"></textarea><br>
+  <button onclick="saveNews()">Save Update</button>
+  <div id="saved">✔ Update Saved</div>
+</div>
 
-  <script>
-    // 🔑 SECRET KEY
-    const SECRET_KEY = "123098";
+<script>
+function unlockEditor() {
+  const editor = document.getElementById("editor");
+  editor.classList.add("show");
+  document.getElementById("newsInput").value =
+    document.getElementById("newsText").innerText;
+}
 
-    function unlockEditor() {
-      const key = prompt("Enter staff access key:");
-      if (key === SECRET_KEY) {
-        document.getElementById("editor").style.display = "block";
-        document.getElementById("newsInput").value =
-          document.getElementById("newsText").innerText;
-      } else {
-        alert("Access denied.");
-      }
-    }
+function saveNews() {
+  document.getElementById("newsText").innerText =
+    document.getElementById("newsInput").value;
 
-    function saveNews() {
-      document.getElementById("newsText").innerText =
-        document.getElementById("newsInput").value;
-    }
-  </script>
+  const saved = document.getElementById("saved");
+  saved.classList.add("show");
+
+  setTimeout(() => saved.classList.remove("show"), 2000);
+}
+</script>
 
 </body>
 </html>
