--- a/index.html
+++ b/index.html
@@ -110,33 +110,33 @@ h1 {
 
 <!-- ---------- MAINTENANCE ---------- -->
 <div class="news-card category-maintenance" onclick="toggleCard(this)">
-  <div class="news-headline">Server Maintenance Tonight</div>
+  <div class="news-headline">Maintenance</div>
   <div class="news-body">
-    Abyss servers will be down from 11:00 PM to 1:00 AM UTC. Please save your progress.
+    Nothing here.
   </div>
 </div>
 
 <!-- ---------- EVENTS ---------- -->
 <div class="news-card category-events" onclick="toggleCard(this)">
-  <div class="news-headline">Community Abyss Challenge</div>
+  <div class="news-headline">Events</div>
   <div class="news-body">
-    Join our weekend event! Complete challenges to earn rare rewards and show off your skills.
+    Nothing here.
   </div>
 </div>
 
 <!-- ---------- UPDATES ---------- -->
 <div class="news-card category-updates" onclick="toggleCard(this)">
-  <div class="news-headline">New Combat System Released</div>
+  <div class="news-headline">Updates</div>
   <div class="news-body">
-    Updated combat mechanics, new weapons, and improved AI behavior are now live for all players.
+    Nothing here.
   </div>
 </div>
 
 <!-- ---------- STAFF APPLICATIONS ---------- -->
 <div class="news-card category-staff" onclick="toggleCard(this)">
-  <div class="news-headline">Staff Applications Open</div>
+  <div class="news-headline">Staff Applications</div>
   <div class="news-body">
-    We are accepting new staff applications! Apply to become a moderator or community helper.
+    Nothing here.
   </div>
 </div>
 
